# HelloRustApi

./: .gitignore  Cargo.toml  README.md  get_coverage  run_tests
examples/: people_list.json
src/: config.rs  main.rs  routes.rs
src/dao/: people.rs
src/models/: person.rs
