[package]
name = "hello-rust-api"
version = "0.1.0"
edition = "2018"

[profile.dev]
split-debuginfo = "unpacked"

[build]
rustc-wrapper="/usr/local/bin/sccache"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lazy_static = "1.4.0"
log="0.4.14"
env_logger="0.8.4"
nanoserde = "^0.1.0"
